<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Home-model</string>

    <string name="artical_latest">当前数据已是最新</string>
    <string name="exception_request_data">数据获取失败!请检查网络后重试</string>


     <!--点播界面  被格式化的参数索引%1$s和%2$s分别表示第一位和第二位占位符，$s表示是字符串 -->
    <string name="txt_desc">简介</string>
    <string name="txt_episode">剧集</string>
    <string name="txt_guess_like">猜你喜欢</string>
    <string name="txt_variety_content">第%1$s期: %2$s</string>
    <string name="txt_variety_new_episode">更新至%1$s期</string>
    <string name="txt_tv_new_episode">更新至%1$s集</string>
    <string name="txt_variety_new">更新至%1$s期 / %2$s期全</string>
    <string name="txt_tv_new">更新至%1$s集 / %2$s集全</string>
    <string name="txt_actor">主演:%1$s</string>
    <string name="txt_director">导演:%1$s</string>
    <string name="txt_detail">简介:%1$s </string>
    <string name="txt_test_int">评分:%1$d </string>
    <string name="pls_input_name">请输入用户名</string>
    <string name="login">登录</string>
    <string name="user_error_tips">User Name Error!</string>
    <string name="bottom_knowlege">知识</string>
    <string name="bottom_live">直播</string>
    <string name="eyepetizer">开眼视频</string>
    <string name="no_use">暂未开发</string>

    <!--MagicIndicatorDemo相关-->
    <string name="scrollable_tab">Scrollable tab</string>
    <string name="fixed_tab">Fixed tab</string>
    <string name="dynamic_tab">Dynamic tab</string>
    <string name="no_tab_only_indicator">No tab, only indicator</string>
    <string name="work_with_fragment_container">Work with fragment container</string>
    <string name="tab_with_badge_view">Tab with badge view</string>
    <string name="custom_navigator">Custom navigator</string>
    <string name="random_page">Random page</string>
    <string name="tab_with_custom_layout">Load custom layout</string>

    <string name="content_view_desc">页面内容显示页面根View</string>


    <string name="menu_collect" tools:ignore="ExtraTranslation">我的收藏</string>
    <string name="menu_system" tools:ignore="ExtraTranslation">知识体系</string>
    <string name="menu_project" tools:ignore="ExtraTranslation">项目分类</string>
    <string name="menu_navi" tools:ignore="ExtraTranslation">网址导航</string>
    <string name="menu_about">关于我们</string>
    <string name="menu_setting">应用设置</string>
    <string name="menu_logout" tools:ignore="ExtraTranslation">退出登录</string>
    <string name="click_login" tools:ignore="ExtraTranslation">点击登录</string>


    <string name="logout_confirm_tips" tools:ignore="ExtraTranslation">再次点击退出登录</string>
    <string name="logout_tips" tools:ignore="ExtraTranslation">用户已退出</string>

    <!-- Setting -->
    <string name="key_of_color">color</string>
    <string name="setting">设置</string>
    <string name="basic_setting">基本设置</string>
    <string name="switch_photo_mode">无图模式</string>
    <string name="switch_no_photo_mode_summary">开启后在非Wifi环境下不加载图片</string>
    <string name="switch_show_top_summary">开启后将不会显示首页置顶文章</string>
    <string name="switch_show_top_title">是否显示首页置顶文章</string>
    <string name="switch_night_mode">夜间模式</string>
    <string name="switch_night_mode_summary">切换夜间皮肤</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_successfully">清理成功</string>
    <string name="other_setting">其他设置</string>
    <string name="about_settings">关于</string>
    <string name="choose_theme_color">主题颜色</string>
    <string name="choose_theme_color_summary">自定义主题颜色</string>
    <string name="custom">自定义</string>
    <string name="nav_bar_coloration">导航栏着色</string>
    <string name="nav_bar_coloration_summary">导航栏颜色跟随主题颜色</string>
    <string name="choose_icon">更换图标</string>
    <string name="choose_icon_summary">重启App生效(可以将App从最近任务列表删除来重启)</string>
    <string name="slidable_title">滑动返回</string>
    <string name="slidable_summary">类似 iOS 左侧滑动返回</string>
    <string name="auto_night_mode">自动切换夜间模式</string>
    <string name="auto_night_mode_summary">设置切换的时间</string>
    <string name="auto_night_mode_subsummary">重启App生效</string>
    <string name="auto_night_category">时间</string>
    <string name="auto_night_start">夜间模式开始时间</string>
    <string name="auto_day_start">日间模式开始时间</string>
    <string name="check_version_fail">检查新版本失败，请稍后重试</string>
    <string name="check_version_ing">正在检查，请稍候...</string>
    <string name="check_no_version">当前已是最新版本了</string>

    <!--  玩安卓  -->
    <string name="home">首页</string>
    <string name="knowledge_system">体系</string>
    <string name="navigation">导航</string>

    <!-- 设置: 关于 -->
    <string name="version">版本</string>
    <string name="current_version">当前版本&#160;</string>
    <string name="official_website">官方网站</string>
    <string name="official_website_url">https://www.wanandroid.com</string>
    <string name="source_code">源代码</string>
    <string name="source_code_url">https://github.com/iceCola7/WanAndroid</string>


    <string name="back">返回</string>
    <string name="done">完成</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
</resources>
