<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/magic_root_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/scrollable_tab"
            style="@style/hub_round_btn_style"
            android:text="@string/scrollable_tab"/>

        <Button
            android:id="@+id/fixed_tab"
            style="@style/hub_round_btn_style"
            android:text="@string/fixed_tab"/>

        <Button
            android:id="@+id/dynamic_tab"
            style="@style/hub_round_btn_style"
            android:text="@string/dynamic_tab"/>

        <Button
            android:id="@+id/no_tab_only_indicator"
            style="@style/hub_round_btn_style"
            android:text="@string/no_tab_only_indicator"/>

        <Button
            android:id="@+id/work_with_fragment_container"
            style="@style/hub_round_btn_style"
            android:text="@string/work_with_fragment_container"/>

        <Button
            android:id="@+id/tab_with_badge_view"
            style="@style/hub_round_btn_style"
            android:text="@string/tab_with_badge_view"/>

        <Button
            android:id="@+id/load_custom_layout"
            style="@style/hub_round_btn_style"
            android:text="@string/tab_with_custom_layout"/>

        <Button
            android:id="@+id/custom_navigator"
            style="@style/hub_round_btn_style"
            android:text="@string/custom_navigator"/>

    </LinearLayout>

</ScrollView>