<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/size_3dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <RadioButton
        android:id="@+id/tabKnowlegaPage"
        style="@style/bottomTab_Green_Style"
        android:drawableTop="@drawable/tab_knowlega_icon"
        android:text="@string/bottom_knowlege"/>

    <RadioButton
        android:id="@+id/tabLive"
        style="@style/bottomTab_Red_Style"
        android:drawableTop="@drawable/tab_vod_icon"
        android:text="@string/bottom_live"/>

    <ImageView
        android:id="@+id/tabPublish"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scaleType="centerInside"
        android:src="@drawable/publish_add"/>

    <RadioButton
        android:id="@+id/tabEyetizer"
        style="@style/bottomTab_Yellow_Style"
        android:drawableTop="@drawable/tab_eyepetizer_icon"
        android:text="@string/eyepetizer"/>

    <RadioButton
        android:id="@+id/tabMine"
        style="@style/bottomTab_Green_Style"
        android:drawableTop="@drawable/tab_mine_icon"
        android:text="@string/no_use"/>

</RadioGroup>
