<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="190dp"
                    android:layout_marginBottom="@dimen/size_20dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ivLogo"
                        style="@style/OnClickStyle"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginBottom="@dimen/size_4dp"
                        app:srcCompat="@mipmap/ic_launcher_round" />

                    <TextView
                        android:id="@+id/tvUser"
                        style="@style/OnClickStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/size_16dp"
                        android:paddingRight="@dimen/size_16dp"
                        android:paddingBottom="@dimen/size_16dp"
                        android:singleLine="true"
                        android:text="@string/click_login"
                        android:textColor="@color/white"
                        android:textSize="@dimen/size_16sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvCollect"
                    style="@style/SlideMenuListStyle"
                    android:drawableLeft="@drawable/ic_menu_collect"
                    android:text="@string/menu_collect" />

                <TextView
                    android:id="@+id/tvSystem"
                    style="@style/SlideMenuListStyle"
                    android:drawableLeft="@drawable/ic_menu_system"
                    android:text="@string/menu_system" />

                <TextView
                    android:id="@+id/tvProject"
                    style="@style/SlideMenuListStyle"
                    android:drawableLeft="@drawable/ic_menu_project"
                    android:text="@string/menu_project" />

                <TextView
                    android:id="@+id/tvNavi"
                    style="@style/SlideMenuListStyle"
                    android:drawableLeft="@drawable/ic_menu_navi"
                    android:text="@string/menu_navi" />

                <TextView
                    android:id="@+id/tvAbout"
                    style="@style/SlideMenuListStyle"
                    android:drawableLeft="@drawable/ic_menu_about"
                    android:text="@string/menu_about" />

                <TextView
                    android:id="@+id/tvLogout"
                    style="@style/SlideMenuListStyle"
                    android:drawableLeft="@drawable/ic_menu_logout"
                    android:text="@string/menu_logout"
                    android:visibility="invisible" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tvVersion"
            style="@style/OnClickStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:minWidth="50dp"
            android:paddingLeft="@dimen/size_16dp"
            android:paddingTop="@dimen/size_2dp"
            android:paddingRight="@dimen/size_16dp"
            android:paddingBottom="@dimen/size_16dp"
            android:textColor="#999999"
            android:textSize="@dimen/size_16sp" />
    </LinearLayout>

    <com.module.anim.FlutteringLayout
        android:id="@+id/flutteringLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        app:heart_duration="3000"
        app:heart_enter_duration="300"
        app:heart_scale="1.0" />
</RelativeLayout>